name:                adventofcode2017
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/pfcm/adventofcode2017#readme
license:             BSD3
author:              pfcm
maintainer:          pfcmathews@gmail.com
copyright:           2017 pfcm
category:            ???
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/adventofcode2017#readme>

library
  hs-source-dirs:      days
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable first
  hs-source-dirs:      days
  main-is:             First.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable second
  hs-source-dirs:      days
  main-is:             Second.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, text
  default-language:    Haskell2010

executable third
  hs-source-dirs:      days
  main-is:             Third.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, containers
  default-language:    Haskell2010

executable fourth
  hs-source-dirs:      days
  main-is:             Fourth.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, text, containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/adventofcode2017
