name:                adventofcode2017
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/pfcm/adventofcode2017#readme
license:             BSD3
author:              pfcm
maintainer:          pfcmathews@gmail.com
copyright:           2017 pfcm
category:            ???
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/adventofcode2017#readme>

library
  hs-source-dirs:      days
  build-depends:       base >= 4.7 && < 5
                     , containers
  exposed-modules:     TwelfthLib
  default-language:    Haskell2010

executable first
  hs-source-dirs:      days
  main-is:             First.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable second
  hs-source-dirs:      days
  main-is:             Second.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, text
  default-language:    Haskell2010

executable third
  hs-source-dirs:      days
  main-is:             Third.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, containers
  default-language:    Haskell2010

executable fourth
  hs-source-dirs:      days
  main-is:             Fourth.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, text, containers
  default-language:    Haskell2010

executable fifth
  hs-source-dirs:      days
  main-is:             Fifth.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, vector, text
  default-language:    Haskell2010

executable sixth
  hs-source-dirs:      days
  main-is:             Sixth.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
  default-language:    Haskell2010

executable seventh
  hs-source-dirs:      days
  main-is:             Seventh.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
                     , containers
  default-language:    Haskell2010

executable eighth
  hs-source-dirs:      days
  main-is:             Eighth.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
                     , containers
  default-language:    Haskell2010

executable ninth
  hs-source-dirs:      days
  main-is:             Ninth.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
                     , containers
  default-language:    Haskell2010

executable tenth
  hs-source-dirs:      days
  main-is:             Tenth.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vector
                     , text
  default-language:    Haskell2010

executable eleventh
  hs-source-dirs:      days
  main-is:             Eleventh.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
  default-language:    Haskell2010

executable twelfth
  hs-source-dirs:      days
  main-is:             Twelfth.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       TwelfthLib
  build-depends:       base
                     , parsec
                     , containers
  default-language:    Haskell2010

executable thirteenth
  hs-source-dirs:      days
  main-is:             Thirteenth.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
                     , vector
  default-language:    Haskell2010

executable fourteenth
  hs-source-dirs:      days
  main-is:             Fourteenth.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , vector
                     , containers
  other-modules:       TwelfthLib
  default-language:    Haskell2010

executable fifteenth
  hs-source-dirs:      days
  main-is:             Fifteenth.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable sixteenth
  hs-source-dirs:      days
  main-is:             Sixteenth.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -funfolding-use-threshold=16 -optc-O3 -optc-ffast-math
  build-depends:       base
                     , parsec
                     , vector
  default-language:    Haskell2010

executable seventeenth
  hs-source-dirs:      days
  main-is:             Seventeenth.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vector
  default-language:    Haskell2010

executable eighteenth
  hs-source-dirs:      days
  main-is:             Eighteenth.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
                     , containers
  default-language:    Haskell2010

executable nineteenth
  hs-source-dirs:      days
  main-is:             Nineteenth.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

executable twentieth
  hs-source-dirs:      days
  main-is:             Twentieth.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
                     , vector
  default-language:    Haskell2010

executable twenty-first
  hs-source-dirs:      days
  main-is:             TwentyFirst.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
                     , containers
                     , vector
  default-language:    Haskell2010

executable twenty-second
  hs-source-dirs:      days
  main-is:             TwentySecond.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
  default-language:    Haskell2010

executable twenty-third
  hs-source-dirs:      days
  main-is:             TwentyThird.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/adventofcode2017
